--- a/slife_backend_theme/static/description/index.html
+++ b/slife_backend_theme/static/description/index.html
@@ -9,33 +9,23 @@
 </section>
 
 <section class="oe_container oe_separator"></section>
-<section class="oe_container oe_dark">
+<section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Active Font Awesome Icon</h2>
-        <div class="oe_span6 text-justify oe_mt32">
-            <span class="fa fa-tools fa-2x pull-left"/>
-            <p class="oe_mb32" style="margin-left:48px;">
-            Activate the Use Font Icon Option to Font Awesome Icon for Your Menu.
-            </p>
-        </div>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="configuration.png">
+        <h4 class="oe_slogan">Activate the Use Font Icon Option to Font Awesome Icon for Your Menu.</h4>
+        <div class="oe_demo oe_picture oe_screenshot">
+            <img src="configuration.png">
         </div>
     </div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container oe_separator"></section>
+<section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Use Font Awesome Icon</h2>
-        <h3 class="oe_slogan"><i class="fa fa-hand-o-right" aria-hidden="true"></i><a href="https://fontawesome.com/icons?d=gallery" target="_blank">https://fontawesome.com/<a></h3>
-        <div class="oe_span6">
-            <img class="oe_picture oe_screenshot" src="add_icon.png">
-        </div>
-        <div class="oe_span6 text-justify oe_mt32">
-            <span class="fa fa-tools fa-2x pull-left"/>
-            <p class="oe_mb32" style="margin-left:48px;">
-              Add the icon you want to your menu. To Get more Icon, Go To Font Awesome Icon Website
-            </p>
+        <h4 class="oe_slogan">Add the icon you want to your menu. To Get more Icon, Go To Font Awesome Icon Website.</h4>
+        <div class="oe_demo oe_picture oe_screenshot">
+            <img src="add_icon.png">
         </div>
     </div>
 </section>
