--- a/slife_backend_theme/static/description/index.html
+++ b/slife_backend_theme/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">SLife Backend Theme</h2>
-        <h4 class="oe_slogan">Use <a href="https://fontawesome.com" target="_blank">Font Awesome</a> Or Image Icon</h4>
+        <h4 class="oe_slogan">Accordion Menu, <a href="https://fontawesome.com" target="_blank">Font Awesome</a> Or Image Icon</h4>
         <div class="oe_demo oe_picture oe_screenshot">
             <img src="main_screenshot.png">
         </div>
