--- a/slife_backend_theme/static/description/index.html
+++ b/slife_backend_theme/static/description/index.html
@@ -32,6 +32,20 @@
 
 <section class="oe_container oe_separator"></section>
 <section class="oe_container">
+  <div class="oe_row oe_spaced">
+      <div class="row" style="max-width: 84%; margin: 16px 8%;">
+        <div class="col-md-6 oe_demo oe_screenshot">
+          <img src="1.png">
+        </div>
+        <div class="col-md-6 oe_demo oe_screenshot">
+          <img src="2.png">
+        </div>
+      </div>
+  </div>
+</section>
+
+<section class="oe_container oe_separator"></section>
+<section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Get Also Organization Chart</h2>
         <h3 class="oe_slogan"><i class="fa fa-hand-o-right" aria-hidden="true"></i><a href="https://apps.odoo.com/apps/modules/12.0/org_chart_premium/" target="_blank">(Click Here) Organization Chart Premium</a></h3>
