--- a/slife_backend_theme/static/description/index.html
+++ b/slife_backend_theme/static/description/index.html
@@ -23,7 +23,7 @@
 <section class="oe_container">
     <div class="oe_row oe_spaced">
         <h2 class="oe_slogan" style="color:#875A7B;">Use Font Awesome Icon</h2>
-        <h4 class="oe_slogan">Add the icon you want to your menu. To Get more Icon, Go To Font Awesome Icon Website.</h4>
+        <h4 class="oe_slogan">Add the icon you want to your menu. To Get more Icon, Go To Font Awesome Icon Website <i class="fa fa-hand-o-right" aria-hidden="true"></i><a href="https://fontawesome.com/icons" target="_blank"> www.fontawesome.com</a>.</h4>
         <div class="oe_demo oe_picture oe_screenshot">
             <img src="add_icon.png">
         </div>
@@ -42,6 +42,15 @@
         </div>
       </div>
   </div>
+</section>
+
+<section class="oe_container oe_separator"></section>
+<section class="oe_container">
+    <div class="oe_row oe_spaced">
+        <div class="oe_demo oe_picture oe_screenshot">
+            <img src="main_1.png">
+        </div>
+    </div>
 </section>
 
 <section class="oe_container oe_separator"></section>
